test/invalid/idl/dict-no-default.widl
dictionary GPUColorStateDescriptor {
    GPUColorWriteFlags writeMask = GPUColorWriteBits.ALL;
};
